--- a/frontend/travel-tech-bd/src/index.css
+++ b/frontend/travel-tech-bd/src/index.css
@@ -2,15 +2,52 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
-    margin: 0px;
-  }
+html,
+body {
+  margin: 0px;
+}
 
 .container-fluid {
-    width: 100%;
-    padding-right: 1px;
-    padding-left: 1px;
-    margin-right: 0px;
-    margin-left: 0px;
-  }
+  width: 100%;
+  padding-right: 1px;
+  padding-left: 1px;
+  margin-right: 0px;
+  margin-left: 0px;
+}
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+/* 
+#snackbar.show {
+  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+@-webkit-keyframes fadein {
+  from {opacity: 0;} 
+  to {opacity: 1;}
+}
+
+@keyframes fadein {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+  from {opacity: 1;} 
+  to {opacity: 0;}
+}
+
+@keyframes fadeout {
+  from {opacity: 1;}
+  to {opacity: 0;}
+} */
